fix(MENDEL-9476): set `overflow-x: hidden`

--- a/src/components/MediaOverlay/Media/DefaultInfogram/DefaultInfogram.module.scss
+++ b/src/components/MediaOverlay/Media/DefaultInfogram/DefaultInfogram.module.scss
@@ -1,5 +1,6 @@
 .DefaultInfogram {
   height: 100%;
+  overflow-x: hidden;
   overflow-y: auto;
   width: 100%;
 }
